[tool.poetry]
name = "bms-ansible"
version = "0.1.0"
description = ""
authors = ["Yukihiro Okada <yuokada@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.2.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.8.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
